# Project_AI_AGENTS_QE_FRAMEWORK_18_May

./: .env.example  .gitignore  EXAMPLES.md  FSC Agentic QE Framework PACT.docx  FSC-2417_report.html  PRODUCTION_READINESS.md  alembic.ini  docker-compose.yml  pyproject.toml
FSC-2417/: _pipeline_summary.json  agent_01_story_intent_agent.json  agent_02_invest_quality_agent.json  agent_03_fca_risk_classifier.json  agent_04_consumer_duty_mapper.json  agent_05_ac_generator.json  agent_06_test_design_strategy.json  agent_07_data_need_agent.json  agent_08_dependency_mapping.json  agent_09_risk_anticipation.json  agent_10_ac_compliance_verifier.json  agent_11_branch_tracer.json  agent_11_story-to-branch_tracer.json  agent_12_apex_coverage.json  agent_12_apex_coverage_analyser.json  agent_13_metadata_dependency.json  agent_13_metadata_dependency_mapper.json  agent_14_code_quality.json  agent_14_code_quality_reviewer.json  agent_15_apex_security_scanner.json  agent_16_bulk_async_quality.json  agent_17_sfdx_source-format_validator.json  agent_18_component_attribution_tracer.json  agent_19_bdd_gherkin_writer.json  agent_20_performance_risk_estimator.json  agent_21_test_data_architect.json  agent_22_sandbox_state_agent.json  agent_23_story-to-code_tracer.json  agent_24_test_strategy_validator.json  agent_25_test_environment_provisioner.json  agent_26_crt_scenario_designer.json  agent_27_crt_execution_agent.json  agent_28_crt_self-heal_reviewer.json  agent_29_uat_test_case_generator.json  agent_30_fca_scenario_agent.json  agent_31_financial_data_integrity.json  agent_32_regression_risk_assessor.json  agent_33_test_coverage_analyser.json  (+20 more)
(+149 files in other folders)
