[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fsc-qe-framework"
version = "0.1.0"
description = "FSC Agentic QE Framework — PACT Edition"
requires-python = ">=3.12"
dependencies = [
    # LLM
    "anthropic>=0.40.0",
    # Orchestration
    "langgraph>=0.2.0",
    "langgraph-checkpoint-postgres>=0.1.0",
    # MCP
    "mcp>=1.0.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "psycopg[binary,pool]>=3.1.0",
    "pgvector>=0.3.0",
    "alembic>=1.13.0",
    # Queue
    "redis[hiredis]>=5.0.0",
    # Validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    # Integrations
    "simple-salesforce>=1.12.0",
    "jira>=3.8.0",
    "httpx>=0.27.0",
    # Azure
    "azure-communication-email>=1.0.0",
    # Data
    "polars>=1.0.0",
    "pyarrow>=17.0.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
